--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zeeshan/inspector",
-    "description": "Inspector is PHP wrapper that fetches people complete profiles detail from different sources using user email address.",
+    "description": "Inspector - A PHP library that fetches the social accounts, website, name, photos, employment history and other details possible for the user by his email.",
     "type": "Library",
     "keywords": ["php"],
     "homepage": "https://github.com/zeeshanu/",
